--- a/slides/cell-centric.html
+++ b/slides/cell-centric.html
@@ -1,8 +1,2 @@
-<h2>Most valuable asset in a biotech company isn't the DNA <em>it's the master cell bank</em></h2>
-<ul>
-  <li>Patients aren't are made of <em>cells</em></li>
-  <li>Manufacturing is (generally) done with <em>cells</em></li>
-  <li>Drug screening is done with <em>cells</em></li>
-  <li>Disease biology is elucidated from <em>cells</em></li>
-</ul>
-<div id="cell-diagram"></div>
+<h2>The Cell is the center of modern pharma</h2>
+<img src="images/jid2011421f1.jpg"/>
