--- a/slides/ge-intro.html
+++ b/slides/ge-intro.html
@@ -1,16 +1,15 @@
-<h2>To build cells, you need to do Genome Editing</h2>
-<h3>(aka ...Synthetic Biology)</h3>
-  <ul class="small-block-grid-2">
-    <li>
-      <figure>
-        <img src="images/LifeTech_TFXN_Methods21222185092.jpg"/>
-        <figcaption>Introduce DNA Vector</figcaption>
-      </figure>
-    <li>
-      <figure>
-        <img src="images/genome-editing-techniques">
-        <figcaption>Patch Genome</figcaption>
-      </figure>
-    </li>
-  </ul>
+<h2>Cells are reprogrammed through <em>Genome Editing</em></h2>
+<ul class="large-block-grid-2">
+  <li id="transfect-img">
+    <figure>
+      <img src="images/LifeTech_TFXN_Methods21222185092.jpg"/>
+      <figcaption>Introduce DNA Vector</figcaption>
+    </figure>
+  <li id="nuclease-img">
+    <figure>
+      <img src="images/genome-editing-techniques">
+      <figcaption>Patch Genome</figcaption>
+    </figure>
+  </li>
+</ul>
 
