--- a/slides/guide-design.html
+++ b/slides/guide-design.html
@@ -1,3 +1,2 @@
-<h2>We can automate guide RNA design</h2>
-
-<p>Please change me!</p>
+<h2>Every rule ...</h2>
+<img src="images/wizard-output.png"/>
