--- a/slides/questions.html
+++ b/slides/questions.html
@@ -1,8 +1,9 @@
-<h2>Questions</h2>
+<h2>Come by our booth and try it out!</h2>
+<h3>www.deskgen.com</h3>
 <ul>
   <li><a>rileyd@desktopgenetics.com</a></li>
   <li><a>@doyle_riley</a></li>
-  <li></li>
   <li><a>http://www.deskgen.com</a></li>
+  <li><a>http://github.com/deskgen</a></li>
   <li><a>https://github.com/rodoyle</a></li>
 </ul>
