--- a/slides/vector-assembly.html
+++ b/slides/vector-assembly.html
@@ -1,3 +1,2 @@
-<h2>We can automate cloning protocol design</h2>
-
-<p>Please change me!</p>
+<h2>Sourcing the right DNA fragments is hard</h2>
+<img src="images/autoclone-vector.png"/>
