--- a/slides/vector-design.html
+++ b/slides/vector-design.html
@@ -1,3 +1,2 @@
-<h2>We can automate vector design</h2>
-
-<p>Please change me!</p>
+<h2>Vector design is still hard</h2>
+<img src="images/generate-design.png"/>
