--- a/slides/donor-design.html
+++ b/slides/donor-design.html
@@ -1,3 +1,3 @@
-<h2>We can automate the design donors</h2>
+<h2>Your cells don't have the reference genome</h2>
+<img src="images/donor-save.png"/>
 
-<p>Please change me!</p>
